--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
         rgba(0, 0, 0, 1) 82%,
         transparent 100%
       );
+
+      @media (max-width: 440px) {
+  .hero-animation {
+    margin-top: 30px;
+  }
     }
 
     .buttons {
@@ -482,6 +487,7 @@
   </script>
 </body>
 </html>
+
 
 
 
