--- a/index.html
+++ b/index.html
@@ -93,6 +93,11 @@
       );
     }
 
+   @media (max-width: 480px) {
+    .hero-animation {
+      margin-top: 35px !important;  /* Отступ сверху */
+    }
+
     .buttons {
       margin-top: -15px;
       display: flex;
@@ -482,5 +487,6 @@
   </script>
 </body>
 </html>
+
 
 
