--- a/index.html
+++ b/index.html
@@ -60,14 +60,6 @@
     filter: drop-shadow(0 1px 2px rgba(52, 46, 49, 0.7));
     border-radius: 12px; /* Если нужно скругление */
     }
-
-  /* Адаптивность */
-@media (max-width: 480px) {
-  .question-image {
-    max-width: 105%;
-    margin-top: 5px;
-    margin-bottom: 5px;
-  }
 }
 
     .hero-animation {
@@ -91,11 +83,6 @@
         rgba(0, 0, 0, 1) 82%,
         transparent 100%
       );
-    }
-
-   @media (max-width: 480px) {
-    .hero-animation {
-      margin-top: 35px !important;  /* Отступ сверху */
     }
 
     .buttons {
@@ -241,6 +228,16 @@
       .valentine-container {
         max-width: 92%;
         padding: 20px 16px 26px;
+      }
+
+      .question-image {
+        max-width: 105%;
+        margin-top: 5px;
+        margin-bottom: 5px;
+      }
+
+      .hero-animation {
+        margin-top: 35px !important;
       }
 
       .question {
@@ -487,6 +484,7 @@
   </script>
 </body>
 </html>
+
 
 
 
