--- a/index.html
+++ b/index.html
@@ -238,6 +238,7 @@
 
       .hero-animation {
         margin-top: 15px !important;
+        width: 70%;
       }
 
       .question {
@@ -484,6 +485,7 @@
   </script>
 </body>
 </html>
+
 
 
 
