--- a/index.html
+++ b/index.html
@@ -266,7 +266,8 @@
       }
 
       .hero-animation {
-        width: 100%; /* или нужная ширина */
+        width:  max-width: 240px; /* ← ЗАМЕНИТЕ 100% на 240px */
+        width: 70%; /*/* или нужная ширина */
         clip-path: inset(10% 0 0 0); /* Обрезает сверху 20% */
       }
     }
@@ -485,6 +486,7 @@
   </script>
 </body>
 </html>
+
 
 
 
