--- a/index.html
+++ b/index.html
@@ -250,6 +250,18 @@
       .buttons {
         gap: 12px;
       }
+       /* Опускаем видео вниз */
+     .hero-animation {
+        margin-top: 10px;        /* убираем отрицательный отступ (-40px по умолчанию) */
+        clip-path: inset(10% 0 0 0); /* дополнительное кадрирование сверху (как на десктопе) */
+      }
+
+      /* Увеличиваем картинку-вопрос */
+    .question-image {
+      max-width: 95%;          /* было 85% – делаем шире */
+      margin-top: 5px;         /* корректируем вертикальные отступы */
+      margin-bottom: 5px;
+      }
     }
 
     @media (min-width: 768px) {
@@ -482,4 +494,5 @@
   </script>
 </body>
 </html>
+
 
