--- a/index.html
+++ b/index.html
@@ -252,14 +252,15 @@
       }
        /* Опускаем видео вниз */
      .hero-animation {
-        margin-top: -10px;        /* убираем отрицательный отступ (-40px по умолчанию) */
+        margin-top: -15px;        /* убираем отрицательный отступ (-40px по умолчанию) */
+        max-width: 65%;
         clip-path: inset(10% 0 0 0); /* дополнительное кадрирование сверху (как на десктопе) */
       }
 
       /* Увеличиваем картинку-вопрос */
     .question-image {
       max-width: 105%;          /* было 85% – делаем шире */
-      margin-top: -5px;         /* корректируем вертикальные отступы */
+      margin-top: -10px;         /* корректируем вертикальные отступы */
       margin-bottom: -5px;
       }
     }
@@ -494,6 +495,7 @@
   </script>
 </body>
 </html>
+
 
 
 
