--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
       button {
         width: 140px;
         height: 140px;
+        margin-bottom: 20px;
       }
 
       .buttons {
@@ -253,7 +254,7 @@
        /* Опускаем видео вниз */
      .hero-animation {
         margin-top: -15px;        /* убираем отрицательный отступ (-40px по умолчанию) */
-        max-width: 65%;
+        max-width: 60%;
         clip-path: inset(10% 0 0 0); /* дополнительное кадрирование сверху (как на десктопе) */
       }
 
@@ -495,6 +496,7 @@
   </script>
 </body>
 </html>
+
 
 
 
