--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
 
     .question-image { max-width: 90%; width: auto; height: auto; margin-top: -35px; margin-bottom: -35px; filter: drop-shadow(0 1px 2px rgba(52,46,49,0.7)); border-radius: 12px; }
 
-    .hero-animation { max-width: 220px; width: 70%; border-radius: 24px; filter: drop-shadow(0 10px 24px rgba(255,105,180,0.7)); margin-top: -40px;
-      -webkit-mask-image: linear-gradient(to bottom, transparent 0%, rgba(0,0,0,1) 18%, rgba(0,0,0,1) 82%, transparent 100%);
-      mask-image: linear-gradient(to bottom, transparent 0%, rgba(0,0,0,1) 18%, rgba(0,0,0,1) 82%, transparent 100%);
+    .hero-animation { max-width: 200px; width: 50%; border-radius: 24px; filter: drop-shadow(0 10px 24px rgba(255,105,180,0.7)); margin-top: -10px;
+      /* обрезка удалена */
     }
 
     .buttons { margin-top: -15px; display: flex; gap: 25px; justify-content: center; position: relative; width: 80%; }
@@ -66,7 +65,7 @@
       .valentine-container { max-width:92%; padding:20px 16px 26px; }
       button { width:140px; height:140px; margin-bottom:20px; }
       .buttons { gap:12px; }
-      .hero-animation { margin-top:-15px; max-width:60%; clip-path: inset(10% 0 0 0); }
+      .hero-animation { margin-top:-15px; max-width:47%; /* clip-path удалён */ }
       .question-image { max-width:105%; margin-top:-10px; margin-bottom:-20px; }
     }
   </style>
@@ -74,7 +73,7 @@
 <body>
   <main class="valentine-container">
     <div class="hearts-container" id="heartsContainer"></div>
-    <video class="hero-animation" id="heroAnimation" src="q.webm" autoplay loop muted playsinline></video>
+    <img src="q.webp" class="hero-animation" id="heroAnimation" alt="анимация">
     <img src="my.png" alt="Будешь моей валентинкой?" class="question-image" id="questionImage" />
     <div class="buttons" id="buttonsContainer">
       <button class="btn-yes" id="yesButton">ДА</button>
