--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     .btn-yes { color: #fff; background-image: url("yes.png"); transform-origin: center center; animation: heartbeatButton 1.9s ease-in-out infinite; }
     .btn-yes:hover { filter: drop-shadow(0 12px 26px rgba(244,175,202,0.9)); }
 
-    .btn-no { color: #fff; position: relative; transform-origin: center center; background-image: url("no.png"); }
+    .btn-no { color: #fff; position: relative; transform-origin: center center; background-image: url("no.png"); touch-action: none; }
 
     .hearts-container { pointer-events: none; position: absolute; inset: 0; overflow: visible; }
     .heart-float { position: absolute; font-size: 18px; color: #ff1100; opacity: 0; animation: floatUp 1.8s ease-out forwards; }
@@ -299,3 +299,4 @@ function triggerHeartsBurst() {
   </script>
 </body>
 </html>
+
